[gd_scene load_steps=4 format=3 uid="uid://cj6fopf6n0bl7"]

[ext_resource type="Script" uid="uid://c8tn8x7jyc0d0" path="res://Scripts/UI/UI.gd" id="1_17gyd"]

[sub_resource type="LabelSettings" id="LabelSettings_r21ec"]
font_size = 64

[sub_resource type="LabelSettings" id="LabelSettings_wajqj"]
outline_size = 16
outline_color = Color(0, 0, 0, 1)

[node name="UI" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_17gyd")

[node name="PauseMenu" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -180.0
offset_right = -280.0
offset_bottom = -140.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="PauseMenu"]
layout_mode = 0
offset_right = 640.0
offset_bottom = 368.0

[node name="Label" type="Label" parent="PauseMenu/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -80.0
offset_right = 80.0
offset_bottom = 32.0
grow_horizontal = 2
text = "Paused"
label_settings = SubResource("LabelSettings_r21ec")

[node name="Main" type="Control" parent="PauseMenu/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Resume" type="Button" parent="PauseMenu/Panel/Main"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -96.0
offset_top = -64.0
offset_right = 96.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 2
text = "Resume"

[node name="Restart" type="Button" parent="PauseMenu/Panel/Main"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -96.0
offset_top = -16.0
offset_right = 96.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
text = "Restart"

[node name="Options" type="Button" parent="PauseMenu/Panel/Main"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -96.0
offset_top = 32.0
offset_right = 96.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
text = "Options"

[node name="Exit" type="Button" parent="PauseMenu/Panel/Main"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -96.0
offset_top = 80.0
offset_right = 96.0
offset_bottom = 112.0
grow_horizontal = 2
grow_vertical = 2
text = "Exit"

[node name="Options" type="Control" parent="PauseMenu/Panel"]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Back" type="Button" parent="PauseMenu/Panel/Options"]
layout_mode = 0
offset_left = 256.0
offset_top = 304.0
offset_right = 384.0
offset_bottom = 336.0
text = "Back"

[node name="Master" type="HSlider" parent="PauseMenu/Panel/Options"]
layout_mode = 0
offset_left = 128.0
offset_top = 128.0
offset_right = 512.0
offset_bottom = 144.0
max_value = 1.0
step = 0.01

[node name="Label" type="Label" parent="PauseMenu/Panel/Options/Master"]
layout_mode = 0
offset_left = 168.0
offset_top = -32.0
offset_right = 223.0
offset_bottom = -9.0
text = "Master"

[node name="Music" type="HSlider" parent="PauseMenu/Panel/Options"]
layout_mode = 0
offset_left = 128.0
offset_top = 192.0
offset_right = 512.0
offset_bottom = 208.0
max_value = 1.0
step = 0.01

[node name="Label" type="Label" parent="PauseMenu/Panel/Options/Music"]
layout_mode = 0
offset_left = 168.0
offset_top = -32.0
offset_right = 223.0
offset_bottom = -9.0
text = "Music"

[node name="SFX" type="HSlider" parent="PauseMenu/Panel/Options"]
layout_mode = 0
offset_left = 128.0
offset_top = 256.0
offset_right = 512.0
offset_bottom = 272.0
max_value = 1.0
step = 0.01

[node name="Label" type="Label" parent="PauseMenu/Panel/Options/SFX"]
layout_mode = 0
offset_left = 178.0
offset_top = -24.0
offset_right = 206.0
offset_bottom = -1.0
text = "SFX"

[node name="Player" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HealthBar" type="HSlider" parent="Player"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 200.0
offset_bottom = 24.0
max_value = 10.0
value = 10.0
editable = false
scrollable = false

[node name="MagazineCapacity" type="Label" parent="Player"]
layout_mode = 0
offset_left = 8.0
offset_top = 24.0
offset_right = 200.0
offset_bottom = 69.0
text = "100/100"
label_settings = SubResource("LabelSettings_wajqj")

[node name="SoulAmount" type="Label" parent="Player"]
layout_mode = 0
offset_left = 96.0
offset_top = 24.0
offset_right = 288.0
offset_bottom = 69.0
text = "0"
label_settings = SubResource("LabelSettings_wajqj")

[node name="Levelend" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[connection signal="pressed" from="PauseMenu/Panel/Main/Resume" to="." method="_onResume"]
[connection signal="pressed" from="PauseMenu/Panel/Main/Restart" to="." method="_onRestart"]
[connection signal="pressed" from="PauseMenu/Panel/Main/Options" to="." method="_onOptions"]
[connection signal="pressed" from="PauseMenu/Panel/Main/Exit" to="." method="_onExit"]
[connection signal="pressed" from="PauseMenu/Panel/Options/Back" to="." method="_onBack"]
[connection signal="value_changed" from="PauseMenu/Panel/Options/Master" to="." method="_on_master_value_changed"]
[connection signal="value_changed" from="PauseMenu/Panel/Options/Music" to="." method="_on_music_value_changed"]
[connection signal="value_changed" from="PauseMenu/Panel/Options/SFX" to="." method="_on_sfx_value_changed"]
